<resources>
    <string name="app_name">SocialMediaApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_fragment_feed">Feed</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="title_fragment_comments">Comments</string>
    <string name="title_comments">Comments</string>
    <string name="title_add_comment">Add comment</string>
    <string name="title_fragment_photos">Photos</string>
    <string name="placeholder_title">Placeholder title</string>
    <string name="placeholder_author">Placeholder author</string>
    <string name="placeholder_body">Placeholder body</string>
    <string name="profile_field_name">Name:</string>
    <string name="profile_field_username">Username:</string>
    <string name="profile_field_email">Email:</string>
    <string name="profile_field_albums">User Albums</string>
</resources>